--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     </label>
                     <ul class="menu__box">
                         <li><a class="menu__item" href="#">Home</a></li>
-			            <li><a class="menu__item" href="#category_main">Catalog</a></li>
+			            <li><a class="menu__item" href="#categories">Catalog</a></li>
 			            <li><a class="menu__item" href="#footer_scroll">Contact us</a></li>
                     </ul>
                 </div>
@@ -33,80 +33,59 @@
                 <img class="filter" src="img/filter_search.png" alt="fiter_of_search">
             </p>
         </div>
-        <div class="product-list">
-            <article class="product">
-                <h3>Tesla Model X</h3>
-                <img src="img/cameras.jpg" alt="Tesla Model X" w>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
-                <div class="product-buttons">
-                    <button class="button card-button">Info</button>
-                    <button class="button card-button">Buy</button>
-                </div>
-            </article>
-            <article class="product">
-                <h3>Tesla Model X</h3>
-                <img src="img/cameras.jpg" alt="Tesla Model X" w>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
-                <div class="product-buttons">
-                    <button class="button card-button">Info</button>
-                    <button class="button card-button">Buy</button>
-                </div>
-            </article>
-            <article class="product">
-                <h3>Tesla Model X</h3>
-                <img src="img/cameras.jpg" alt="Tesla Model X" w>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
-                <div class="product-buttons">
-                    <button class="button card-button">Info</button>
-                    <button class="button card-button">Buy</button>
-                </div>
-            </article>
-            <article class="product">
-                <h3>Tesla Model X</h3>
-                <img src="img/cameras.jpg" alt="Tesla Model X" w>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
-                <div class="product-buttons">
-                    <button class="button card-button">Info</button>
-                    <button class="button card-button">Buy</button>
-                </div>
-            </article>
-            <article class="product">
-                <h3>Tesla Model X</h3>
-                <img src="img/cameras.jpg" alt="Tesla Model X" w>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
-                <div class="product-buttons">
-                    <button class="button card-button">Info</button>
-                    <button class="button card-button">Buy</button>
-                </div>
-            </article>
-            <article class="product">
-                <h3>Tesla Model X</h3>
-                <img src="img/cameras.jpg" alt="Tesla Model X" w>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
-                <div class="product-buttons">
-                    <button class="button card-button">Info</button>
-                    <button class="button card-button">Buy</button>
-                </div>
-            </article>
-            <article class="product">
-                <h3>Tesla Model X</h3>
-                <img src="img/cameras.jpg" alt="Tesla Model X" w>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
-                <div class="product-buttons">
-                    <button class="button card-button">Info</button>
-                    <button class="button card-button">Buy</button>
-                </div>
-            </article>
-            <article class="product">
-                <h3>Tesla Model X</h3>
-                <img src="img/cameras.jpg" alt="Tesla Model X" w>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
-                <div class="product-buttons">
-                    <button class="button card-button">Info</button>
-                    <button class="button card-button">Buy</button>
-                </div>
-            </article>
-        </div>
+        <main id="categories">
+            <div class="product-list">
+                <a href="cameras.html">
+                    <article class="product">
+                        <h3>Cameras</h3>
+                        <img src="img/cameras.jpg" alt="Cameras">
+                    </article>
+                </a>
+                <a href="cameras.html">
+                    <article class="product">
+                        <h3>Cameras</h3>
+                        <img src="img/cameras.jpg" alt="Cameras">
+                    </article>
+                </a>
+                <a href="cameras.html">
+                    <article class="product">
+                        <h3>Cameras</h3>
+                        <img src="img/cameras.jpg" alt="Cameras">
+                    </article>
+                </a>
+                <a href="cameras.html">
+                    <article class="product">
+                        <h3>Cameras</h3>
+                        <img src="img/cameras.jpg" alt="Cameras">
+                    </article>
+                </a>
+                <a href="cameras.html">
+                    <article class="product">
+                        <h3>Cameras</h3>
+                        <img src="img/cameras.jpg" alt="Cameras">
+                    </article>
+                </a>
+                <a href="cameras.html">
+                    <article class="product">
+                        <h3>Cameras</h3>
+                        <img src="img/cameras.jpg" alt="Cameras">
+                    </article>
+                </a>
+                <a href="cameras.html">
+                    <article class="product">
+                        <h3>Cameras</h3>
+                        <img src="img/cameras.jpg" alt="Cameras">
+                    </article>
+                </a>
+                <a href="cameras.html">
+                    <article class="product">
+                        <h3>Cameras</h3>
+                        <img src="img/cameras.jpg" alt="Cameras">
+                    </article>
+                </a>
+
+            </div>
+        </main>
         <footer id="footer_scroll">
             <div class="contact">
                 <p class="footer_contact"> Contact us: </p>
