--- a/cameras.html
+++ b/cameras.html
@@ -18,6 +18,7 @@
                         <span></span>
                     </label>
                     <ul class="menu__box">
+                        <li><a class="menu__logo" href="index.html">Shadow Guard</a></li>
                         <li><a class="menu__item" href="index.html">Home</a></li>
 			            <li><a class="menu__item" href="#products">Catalog</a></li>
 			            <li><a class="menu__item" href="#footer_scroll">Contact us</a></li>
@@ -28,10 +29,9 @@
             </nav>
         </header>
         <div class="board">
-            <p class="catalog">Catalog
-                <input class="search" type="search" name="search" placeholder="Пошук">
-                <img class="filter" src="img/filter_search.png" alt="fiter_of_search">
-            </p>
+            <p class="catalog">Catalog</p>
+            <input class="search" type="search" name="search" placeholder="Пошук">
+            <img class="filter" src="img/filter_search.png" alt="fiter_of_search">
         </div>
 
         <main>
