--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
                         <span></span>
                     </label>
                     <ul class="menu__box">
+                        <li><a class="menu__logo" href="index.html">Shadow Guard</a></li>
                         <li><a class="menu__item" href="#">Home</a></li>
 			            <li><a class="menu__item" href="#categories">Catalog</a></li>
-			            <li><a class="menu__item" href="#footer_scroll">Contact us</a></li>
+			            <li><a class="menu__item" href="#footer_scroll">Contact us<br></a></li>
                     </ul>
                 </div>
                 <div class="banner">
@@ -28,10 +29,9 @@
             </nav>
         </header>
         <div class="board">
-            <p class="catalog">Catalog
-                <input class="search" type="search" name="search" placeholder="Пошук">
-                <img class="filter" src="img/filter_search.png" alt="fiter_of_search">
-            </p>
+            <p class="catalog">Catalog</p>
+            <input class="search" type="search" name="search" placeholder="Пошук">
+            <img class="filter" src="img/filter_search.png" alt="fiter_of_search">
         </div>
         <main id="categories">
             <div class="product-list">
