--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Shadow Guard</title>
-        <link href="index.css" rel="stylesheet">
+        <link href="css/index.css" rel="stylesheet">
         <link rel="shortcut icon" href="img/logo.jpg" type="image/x-icon">
     </head>
     <body>
